<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spark Remote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="switch_name">Switch name</string>
    <string name="time_hint">Time</string>
    <string name="mon_hint">MON</string>
    <string name="tue_hint">TUE</string>
    <string name="wed_hint">WED</string>
    <string name="thu_hint">THU</string>
    <string name="fri_hint">FRI</string>
    <string name="sat_hint">SAT</string>
    <string name="sun_hint">SUN</string>

</resources>
